--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+body {
+  margin: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  width: 18rem;
+  border: #d3cccc solid 2px;
+  margin-bottom: 30px;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-img-top {
+  background-color: gray;
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h3 {
+  padding-left: 10px;
+  color: #717175;
+}
+
+p {
+  color: #717175;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.btn {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 125px;
+  height: 30px;
+  background-color: #0f95ec;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  border-radius: 5px;
+}
+
+a {
+  text-decoration: none;  
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding-top: 3px;
 }
